--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # , l5, self-hosted
+    runs-on: ubuntu-latest 
     permissions:
       contents: write
     steps:
@@ -13,4 +13,4 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Build Docker image (manual)
-      run: run.sh
+      run: ./run.sh
