--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v3
-    
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3    
     - name: Build Docker image (manual)
       run: ./run.sh
