--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,5 @@ jobs:
       uses: docker/setup-qemu-action@v3    
     - name: Build Docker image (manual)
       run: ./run.sh
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
