--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -5,14 +5,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest 
+    runs-on: macos-latest 
     permissions:
       contents: write
     strategy:
       fail-fast: false
       matrix:
         platform:
-          - linux/amd64
+          # - linux/amd64
           - linux/arm64
 
     steps:
@@ -24,19 +24,19 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3    
+    # - name: Set up QEMU
+    #   uses: docker/setup-qemu-action@v3    
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
     -
-      name: Build and push by digest
+      name: Build 
       id: build
       uses: docker/build-push-action@v5
       with:
         context: .
         platforms: ${{ matrix.platform }}
         labels: ${{ steps.meta.outputs.labels }}
-        outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+        outputs: type=image,name=${{ env.REGISTRY_IMAGE }},name-canonical=true,push=false
 
