--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -16,16 +16,26 @@ jobs:
           - linux/arm64
 
     steps:
-    -
-      name: Prepare
+    - name: Prepare
       run: |
         platform=${{ matrix.platform }}
-        echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV      
+        echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV    
+        
+        
     - name: Check out code
       uses: actions/checkout@v3
 
     # - name: Set up QEMU
     #   uses: docker/setup-qemu-action@v3    
+    -
+      name: Set up Docker
+      uses: crazy-max/ghaction-setup-docker@v3
+
+    - name: Login to DockerHub
+      uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
