--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Docker Build
+name: run.sh
 
 on:
   push
@@ -10,8 +10,6 @@ jobs:
       contents: write
     steps:
     - name: Check out code
-      uses: actions/checkout@v3 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3      
+      uses: actions/checkout@v3    
     - name: Build Docker image (manual)
       run: ./run.sh
