--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,10 @@ jobs:
       contents: write
     steps:
     - name: Check out code
-      uses: actions/checkout@v3    
+      uses: actions/checkout@v3 
+      
+    -
+      name: Set up Docker
+      uses: crazy-max/ghaction-setup-docker@v3      
     - name: Build Docker image (manual)
       run: ./run.sh
