--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -58,6 +58,6 @@ jobs:
           PLATFORM=${{ matrix.platform }}
         # platforms: ${{ matrix.platform }}
         # labels: ${{ steps.meta.outputs.labels }}
-        outputs: type=image,name=${{ env.REGISTRY_IMAGE }},name-canonical=true,push=false
+        # outputs: type=image,name=${{ env.REGISTRY_IMAGE }},name-canonical=true,push=false
         tags: ${{ env.REGISTRY_IMAGE_NAME }}
   
