--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -42,13 +42,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    -
-      name: Build 
-      id: build
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        # platforms: ${{ matrix.platform }}
-        # labels: ${{ steps.meta.outputs.labels }}
-        outputs: type=image,name=${{ env.REGISTRY_IMAGE }},name-canonical=true,push=false
+    - name: Build Docker image (manual)
+      run: docker build -t my-docker-image .   
+
+    # -
+    #   name: Build 
+    #   id: build
+    #   uses: docker/build-push-action@v5
+    #   with:
+    #     context: .
+    #     # platforms: ${{ matrix.platform }}
+    #     # labels: ${{ steps.meta.outputs.labels }}
+    #     outputs: type=image,name=${{ env.REGISTRY_IMAGE }},name-canonical=true,push=false
 
