--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,8 @@ jobs:
       uses: crazy-max/ghaction-setup-docker@v3    
       # uses: crazy-max/ghaction-setup-containerd@v3
       
+    # - name: Build Docker image (manual)
+    #   run: ./run.sh
+
     - name: Build Docker image (manual)
-      run: ./run.sh
+      run: docker build -t my-docker-image .
