--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,14 @@ jobs:
       run: |
         brew install --cask docker
 
-    - name: Start Docker
-      run: |
-        # Start Docker.app if not already running
-        if ! pgrep -f Docker.app; then
-          open -a /Applications/Docker.app
-          # Wait for Docker to be ready
-          while ! docker info >/dev/null 2>&1; do sleep 1; done
-        fi
+    # - name: Start Docker
+    #   run: |
+    #     # Start Docker.app if not already running
+    #     if ! pgrep -f Docker.app; then
+    #       open -a /Applications/Docker.app
+    #       # Wait for Docker to be ready
+    #       while ! docker info >/dev/null 2>&1; do sleep 1; done
+    #     fi
 
     - name: Build Docker image (manual)
       run: docker build -t my-docker-image .
