--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest-large
+    runs-on: macos-13-large
     permissions:
       contents: write
     steps:
